Fix search page layout on narrow screens

--- a/src/css/dgu-drupal.less
+++ b/src/css/dgu-drupal.less
@@ -1733,6 +1733,11 @@ body.page-search {
     }
   }
 
+  @media(max-width: 767px) {
+    #main-content .pane-apachesolr-result ul {
+      clear: both;
+    }
+  }
 
 }
 
